# jupyter-collab-tests

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  playwright.chat.config.ts  playwright.config.ts  tsconfig.json
server/: jupyter_server_chat_test_config.py  jupyter_server_config.py  pyproject.toml
server/notebooks/: collab-test.ipynb  test-mention.chat
tests/: chat-fixtures.ts  chat-global-setup.ts  chat-global-teardown.ts  chat-helpers.ts  fixtures.ts  global-setup.ts  global-teardown.ts  playwright.config.ts  toxiproxy-client.ts
tests/specs/: chat-agent-mention.spec.ts  chat-multi-agent.spec.ts  chat-yroom-drain.spec.ts  collab-bandwidth.spec.ts  collab-create.spec.ts  collab-disconnect.spec.ts  collab-latency.spec.ts  collab-packet.spec.ts
