[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jupyter-collab-chaos-server"
version = "0.1.0"
description = "JupyterLab server environment for jupyter-collab-chaos tests"
requires-python = ">=3.11"
dependencies = [
    "jupyterlab>=4.2.0",
    "jupyter-collaboration>=2.0.0",
    "jupyter-server-documents>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.2.0",
    "jupyter-collaboration>=2.0.0",
    "jupyter-server-documents>=0.1.0",
]
